# backend/routers/api/auth.go
@@ -9,6 +9,6 @@ import (
 func AuthRoutes(r *gin.RouterGroup) {
 	r.GET("/temp", auth.Temp)
 	r.GET("/login", auth.Temp)
-	r.GET("/login/google", auth.Temp)
+	r.POST("/login/google", auth.LoginGoogle)
 	r.GET("/signup", auth.Temp)
 }
